Fixing outdated dependencies

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gulp starter w/ BS, jQuery, riot",
+  "name": "Environment starter",
   "authors": [
     "Zach Cowell <zach.cowell@gmail.com>"
   ],
