--- a/ansible/roles/postgres/tasks/main.yml
+++ b/ansible/roles/postgres/tasks/main.yml
@@ -16,7 +16,7 @@
   sudo_user: postgres
 
 - postgresql_db:
-    name=countdown
+    name=cowell
     encoding='UTF-8'
     template='template0'
     owner='vagrant'
